--- a/css/style.css
+++ b/css/style.css
@@ -699,6 +699,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding-bottom: 50px;
 }
 
 /* Award item styling */
