--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,8 @@ h1, h2, h3, h4, h5, h6, figure {
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center items horizontally */
+  align-items: center;
+  
 }
 
 .timeline li {
@@ -388,7 +389,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: flex;
   justify-content: center;
   position: relative;
-  /* margin-bottom: 30px; */
+  margin: 5px 0;
  
 
 }
@@ -399,9 +400,20 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .timeline-panel {
-  min-width: 600px;
   max-width: 700px;
-  padding: 15px;
+  padding: 40px 20px 10px 15px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  display: flex;
+  align-items: center;
+
+}
+
+.timeline-panel-ed {
+  max-width: 700px;
+  padding: 40px 20px 0px 15px;
   background: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
