--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,9 @@ h1, h2, h3, h4, h5, h6, figure {
 
 /* About Section */
 #fh5co-about {
-  background: linear-gradient(135deg, #e36e3c 0%, #000000 100%);
+  background: linear-gradient(90deg, #a78fb8 0%, #eabeab 100%);
+
+  /* background-color: #7d6c8f; */
   color: #fff;
   padding: 50px 0;
   border-radius: 15px;
