--- a/css/style.css
+++ b/css/style.css
@@ -924,6 +924,7 @@ span.lastname{
   z-index: 1000; /* Ensures the navbar stays on top of other content */
   padding: 3px 0;
   border-radius: 0;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .navbar-content {
@@ -946,7 +947,7 @@ span.lastname{
   transition: 0.5s;
 }
 
-.dropdown-bftn {
+.dropdown-btn {
   background-color: #ffc08c00;
   color: white;
   font-size: 20px;
