--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,10 @@ h1, h2, h3, h4, h5, h6, figure {
   font-size: 30px;
 }
 
+#first-page-content {
+ padding-top: 80px;
+}
+
 
 /* table of content */
 #fh5co-toc {
