--- a/css/style.css
+++ b/css/style.css
@@ -1009,6 +1009,7 @@ span.lastname{
 
 .sorn-dropdown {
   position: absolute;
+  bottom: 0;
 
 }
 
@@ -1020,6 +1021,7 @@ span.lastname{
   cursor: pointer;
   width: 50px;
   transition: transform 0.3s ease-in-out;
+  padding: 8px 0;  
 }
 
 .sorn-dropdown-btn:hover {
@@ -1037,7 +1039,6 @@ span.lastname{
   z-index: 1;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   left: 0; /* Ensure it aligns with the left side of the viewport */
-  padding-top: 10px;
   transition: transform 0.5s ease-out, opacity 0.5s ease-out, max-height 0.5s ease-out;
   max-height: 0; /* Initially collapsed */
   opacity: 0; /* Initially invisible */
@@ -1047,7 +1048,6 @@ span.lastname{
 
 /* When dropdown content is visible */
 .sorn-dropdown-content.show {
-  margin-top: 3px;
   max-height: 500px; /* Set a max-height to make the transition visible */
   opacity: 1; /* Make content visible */
   transform: translateY(0); /* Slide down to normal position */
